# cheat-engine-linux

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_ANALYSIS.md  CONTRIBUTING.md  DOC_AUDIT_2026-07-11.md  FEATURE_GAP.md  FIXES_APPLIED.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  VS_OFFICIAL_CE_LINUX.md  sample_game.c
.github/workflows/: build.yml  release.yml
analysis/: code_analysis.cpp  code_analysis.hpp  il2cpp_binary.cpp  il2cpp_binary.hpp  il2cpp_metadata.cpp  il2cpp_metadata.hpp  managed_runtime.cpp  managed_runtime.hpp  mono_dissector.cpp  mono_dissector.hpp  pe_exports.cpp  pe_exports.hpp  signature.cpp  signature.hpp  structure_tools.cpp  structure_tools.hpp
arch/: assembler.cpp  assembler.hpp  cpu_flags.hpp  disassembler.cpp  disassembler.hpp
cli/: main.cpp
core/: aa_templates.cpp  aa_templates.hpp  address_list.hpp  autoasm.cpp  autoasm.hpp  ct_file.cpp  ct_file.hpp  expression.cpp  expression.hpp  guest_view.hpp  injection_gen.cpp  injection_gen.hpp  log.cpp  log.hpp  memview_nav.hpp  ns_attach.hpp  simple_address_list.hpp  simple_hook.cpp  simple_hook.hpp  target_profile.hpp  trainer.cpp  trainer.hpp  types.cpp  types.hpp  value_codec.hpp  value_transform.hpp
debug/: breakpoint_manager.cpp  breakpoint_manager.hpp  code_finder.cpp  code_finder.hpp  debug_session.cpp  debug_session.hpp  gdb_remote.cpp  gdb_remote.hpp  instruction_access.cpp  instruction_access.hpp  intel_pt.cpp  intel_pt.hpp  lbr_tracer.cpp  lbr_tracer.hpp  managed_breakpoint.cpp  managed_breakpoint.hpp  patch.cpp  patch.hpp  stack_trace.cpp  stack_trace.hpp  tracer.cpp  tracer.hpp
docs/: CE_FEATURE_INVENTORY.md  CHALLENGING_TARGETS.md  CLI_PARITY.md  DEVELOPMENT.md  GUI_PARITY.md  SCRIPTING.md
examples/: il2cpp_dump.lua  il2cpp_hook.lua  native_struct.lua  reverse_engineer.lua
gui/: advancedoptions.cpp  advancedoptions.hpp  branchmapper.cpp  branchmapper.hpp  breakpointlist.cpp  breakpointlist.hpp  canvaswidget.cpp  canvaswidget.hpp  changeaddressdialog.cpp  changeaddressdialog.hpp  codefinder.cpp  codefinder.hpp  codereferences.cpp  codereferences.hpp  debuggerwindow.cpp  debuggerwindow.hpp  elfinspector.cpp  elfinspector.hpp  filepatcher.cpp  filepatcher.hpp  findstaticswindow.cpp  findstaticswindow.hpp  formdesigner.cpp  formdesigner.hpp  globalhotkeys.cpp  globalhotkeys.hpp  graphicalmemoryview.cpp  graphicalmemoryview.hpp  guest_scan_dialog.cpp  guest_scan_dialog.hpp  heapregions.cpp  heapregions.hpp  luaconsole.cpp  luaconsole.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  memorybrowser.cpp  memorybrowser.hpp  memoryfill.cpp  (+34 more)
kernel/: Makefile  cecore_kmod.c  cecore_kmod.h
packaging/: build-appimage.sh  cecore.pc.in  cheat-engine-linux.mime.xml  cheatengine.desktop  io.github.wleeaf.CheatEngineLinux.metainfo.xml
packaging/deb/: postinst  postrm
platform/: network_compression.cpp  network_compression.hpp  process_api.hpp  vulkan_overlay_injector.cpp  vulkan_overlay_injector.hpp  vulkan_overlay_layer.cpp
platform/linux/: ceserver_client.cpp  ceserver_client.hpp  ceserver_debugger.cpp  ceserver_debugger.hpp  ceserver_process.cpp  ceserver_process.hpp  ceserver_server.cpp  ceserver_server.hpp  ceserver_stubs.c  injector.cpp  injector.hpp  kernel_driver.cpp  kernel_driver.hpp  linux_process.cpp  linux_process.hpp  mono_debugger_client.cpp  mono_debugger_client.hpp  ns_attach.cpp  process_watcher.cpp  process_watcher.hpp  ptrace_wrapper.cpp  ptrace_wrapper.hpp  target_profile.cpp
plugins/: audiohack.cpp  cecore_plugin.h  inprocess_veh.c  mono_agent.c  plugin_loader.cpp  plugin_loader.hpp  sample_plugin.c  speedhack.c
scanner/: cuda_search.cu  cuda_search.hpp  cuda_search_stub.cpp  memory_scanner.cpp  memory_scanner.hpp  pointer_scanner.cpp  pointer_scanner.hpp  snapshot.cpp  snapshot.hpp
scripting/: lua_bindings.cpp  lua_bitmap.cpp  lua_engine.cpp  lua_engine.hpp  lua_gui.cpp  lua_gui.hpp  lua_memrec.cpp  lua_memrec.hpp  lua_snapshot.cpp  lua_streams.cpp
symbols/: dwarf_symbols.cpp  dwarf_symbols.hpp  elf_symbols.cpp  elf_symbols.hpp  kernel_symbols.cpp  kernel_symbols.hpp
test/: gui_browser_shot.cpp  gui_changeaddr_smoke.cpp  gui_codefinder_smoke.cpp  gui_debugger_smoke.cpp  gui_disasm_smoke.cpp  gui_guest_scan_smoke.cpp  gui_hexview_smoke.cpp  gui_luaconsole_smoke.cpp  gui_mono_shot.cpp  gui_script_shot.cpp  gui_search_smoke.cpp  gui_structdissect_smoke.cpp  gui_theme_smoke.cpp  main.cpp  scan_test.cpp  wayland_shortcuts_test.cpp
tools/: ci-check.sh
tools/lfm2qt/: README.md  gen_ui.py  gui_parity.py  lfm2qt.py  lfm_parser.py  widget_map.py
